# tang

./: BENCHMARKS.md  Cargo.toml  README.md
crates/tang/: Cargo.toml  README.md
crates/tang-3dgs/: Cargo.toml
crates/tang-3dgs/examples/: grad_check.rs  render_test.rs  train_image.rs  train_scene.rs
crates/tang-3dgs/src/: cloud.rs  densify.rs  lib.rs  pipeline.rs  ply.rs  project.rs  project_backward.rs  rasterize.rs  sort.rs
crates/tang-ad/: Cargo.toml  README.md
crates/tang-ad/src/: lib.rs  tape.rs  var.rs
crates/tang-bench/: Cargo.toml  README.md
crates/tang-bench/benches/: autodiff.rs  cpu_training.rs  dense_la.rs  differentiable.rs  expr_graph.rs  fixed_size.rs  gpu_inference.rs  gpu_training.rs
crates/tang-bench/scripts/: binary_size.sh  compile_time.sh
crates/tang-bench/src/: lib.rs
crates/tang-compile/: Cargo.toml
crates/tang-compile/src/: fusion.rs  lib.rs  passes.rs
crates/tang-compute/: Cargo.toml  PERFORMANCE.md  build.rs
crates/tang-compute/src/: cpu.rs  cuda.rs  device.rs  lib.rs  metal.rs  modules.rs  ops.rs  pool.rs  tensor.rs
crates/tang-compute/src/kernels/: adamw_cuda.rs  adamw_msl.rs  attention_cuda.rs  attention_msl.rs  backward_cuda.rs  matmul_cuda.rs  matmul_msl.rs  mod.rs  noise_cuda.rs  reduce_cuda.rs  util_cuda.rs
crates/tang-expr/: Cargo.toml  README.md
crates/tang-expr/examples/: symbolic_regression.rs
crates/tang-expr/src/: codegen.rs  compile.rs  diff.rs  display.rs  eval.rs  graph.rs  lib.rs  node.rs  scalar.rs  simplify.rs  sparsity.rs  wgsl.rs
crates/tang-gpu/: Cargo.toml  README.md
crates/tang-gpu/examples/: physics_surrogate.rs  quantum_poet.rs
crates/tang-gpu/src/: backward.rs  buffer.rs  device.rs  kernel.rs  lib.rs  llm.rs  matmul.rs  module.rs  nn.rs  realize.rs  reduce.rs  safetensors.rs  tensor.rs  train.rs
crates/tang-holo/: Cargo.toml
crates/tang-holo/scripts/: detect_landmarks.py  extract_audio.py  segment_face.py  track_face.py
crates/tang-holo/src/: audio.rs  audio_encoder.rs  background.rs  canonical.rs  cross_attention.rs  deformation.rs  holo_format.rs  holo_model.rs  landmarks.rs  preprocess.rs  segmentation.rs  tracking.rs  triplane.rs
crates/tang-hub/: Cargo.toml  README.md
crates/tang-hub/src/: lib.rs
crates/tang-infer/: Cargo.toml
crates/tang-infer/src/: kv_cache.rs  lib.rs  profile.rs  quantize.rs  sampling.rs
crates/tang-la/: Cargo.toml  README.md  build.rs
crates/tang-la/examples/: bench_matmul.rs
crates/tang-la/src/: cholesky.rs  dmat.rs  dvec.rs  eigen.rs  lib.rs  lu.rs  qr.rs  svd.rs
crates/tang-mesh/: Cargo.toml  README.md
crates/tang-mesh/examples/: coded_mesh.rs  distributed_sin.rs
crates/tang-mesh/src/: allreduce.rs  coded.rs  coordinator.rs  distributed.rs  error.rs  fault.rs  inference.rs  lib.rs  mesh.rs  partition.rs  placement.rs  protocol.rs  transport.rs  worker.rs
crates/tang-mesh/tests/: integration.rs
crates/tang-onnx/: Cargo.toml
crates/tang-onnx/src/: graph.rs  lib.rs  ops.rs  serialize.rs
crates/tang-optim/: Cargo.toml  README.md
crates/tang-optim/src/: adam.rs  lbfgs.rs  lib.rs  line_search.rs  lm.rs  newton.rs  sgd.rs
crates/tang-safetensors/: Cargo.toml.bak  README.md
crates/tang-safetensors/src/: lib.rs
crates/tang-site-wasm/: Cargo.toml
crates/tang-site-wasm/src/: lib.rs
crates/tang-sparse/: Cargo.toml  README.md
crates/tang-sparse/src/: coo.rs  csc.rs  csr.rs  lib.rs
crates/tang-tensor/: Cargo.toml  Cargo.toml.bak  README.md
crates/tang-tensor/src/: lib.rs  shape.rs  tensor.rs
crates/tang-train/: Cargo.toml  README.md
crates/tang-train/examples/: pinn_poisson.rs  quantum_poet.rs  smollm.rs
crates/tang-train/src/: data.rs  layers.rs  lib.rs  loss.rs  module.rs  optimizer.rs  parameter.rs  pinn.rs  rng.rs  scheduler.rs  trainer.rs
crates/tang-train/tests/: training.rs
crates/tang/src/: dir3.rs  dual.rs  lib.rs  mat3.rs  mat4.rs  point2.rs  point3.rs  predicates.rs  quat.rs  scalar.rs  spatial.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
crates/tang/src/ad/: mod.rs  var.rs
crates/tang/src/compute/: cpu.rs  cuda.rs  device.rs  metal.rs  mod.rs  modules.rs  ops.rs  tensor.rs
crates/tang/src/compute/kernels/: adamw_cuda.rs  attention_cuda.rs  attention_msl.rs  backward_cuda.rs  backward_msl.rs  matmul_msl.rs  mod.rs  reduce_msl.rs
crates/tang/src/expr/: codegen.rs  compile.rs  diff.rs  display.rs  eval.rs  graph.rs  mod.rs  scalar.rs  simplify.rs  sparsity.rs  wgsl.rs
crates/tang/src/gpu/: backward.rs  buffer.rs  kernel.rs  llm.rs  matmul.rs  mod.rs  module.rs  nn.rs  realize.rs  reduce.rs  safetensors.rs  tensor.rs  train.rs
crates/tang/src/holo/: audio_encoder.rs  canonical.rs  deformation.rs  frames.rs  holo_format.rs  holo_model.rs  mod.rs  preprocess.rs
crates/tang/src/la/: blas.rs  cholesky.rs  dmat.rs  dvec.rs  eigen.rs  lu.rs  mod.rs  qr.rs  svd.rs
crates/tang/src/optim/: adam.rs  lbfgs.rs  lm.rs  newton.rs  sgd.rs
crates/tang/src/safetensors/: mod.rs
crates/tang/src/splatting/: camera.rs  cloud.rs  densify.rs  mod.rs  pipeline.rs  ply.rs  project_backward.rs  rasterize.rs  train.rs
crates/tang/src/tensor/: shape.rs  tensor.rs
crates/tang/src/train/: data.rs  layers.rs  loss.rs  mod.rs  module.rs  optimizer.rs  parameter.rs  pinn.rs  rng.rs  scheduler.rs  trainer.rs
site/: boot.js  index.html  viz.loon
site/pkg/loon/: loon_wasm.js  loon_wasm_bg.wasm
site/pkg/tang/: README.md  package.json  tang_site_wasm.d.ts  tang_site_wasm.js  tang_site_wasm_bg.wasm  tang_site_wasm_bg.wasm.d.ts
src/: dir3.rs  dual.rs  lib.rs  mat3.rs  mat4.rs  point2.rs  point3.rs  quat.rs  scalar.rs  spatial.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
