[workspace]
resolver = "2"
members = [
    "crates/tang",
    "crates/tang-la",
    "crates/tang-ad",
    "crates/tang-sparse",
    "crates/tang-gpu",
    "crates/tang-tensor",
    "crates/tang-optim",
    "crates/tang-train",
    "crates/tang-bench",
    "crates/tang-site-wasm",
    "crates/tang-expr",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tang = { path = "crates/tang" }
tang-la = { path = "crates/tang-la" }
tang-ad = { path = "crates/tang-ad" }
tang-sparse = { path = "crates/tang-sparse" }
tang-gpu = { path = "crates/tang-gpu" }
tang-tensor = { path = "crates/tang-tensor" }
tang-optim = { path = "crates/tang-optim" }
tang-train = { path = "crates/tang-train" }
tang-expr = { path = "crates/tang-expr" }
