[workspace]
resolver = "2"
members = [
    "crates/tang",
    "crates/tang-la",
    "crates/tang-ad",
    "crates/tang-sparse",
    "crates/tang-gpu",
    "crates/tang-tensor",
    "crates/tang-optim",
    "crates/tang-train",
    "crates/tang-safetensors",
    "crates/tang-hub",
    "crates/tang-bench",
    "crates/tang-site-wasm",
    "crates/tang-expr",
    "crates/tang-mesh",
    "crates/tang-infer",
    "crates/tang-onnx",
    "crates/tang-compile",
    "crates/tang-compute",
    "crates/tang-3dgs",
    "crates/tang-holo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ecto/tang"

[workspace.dependencies]
tang = { version = "0.1.0", path = "crates/tang" }
tang-la = { version = "0.1.0", path = "crates/tang-la" }
tang-ad = { version = "0.1.0", path = "crates/tang-ad" }
tang-sparse = { version = "0.1.0", path = "crates/tang-sparse" }
tang-gpu = { version = "0.1.0", path = "crates/tang-gpu" }
tang-tensor = { version = "0.1.0", path = "crates/tang-tensor" }
tang-optim = { version = "0.1.0", path = "crates/tang-optim" }
tang-train = { version = "0.1.0", path = "crates/tang-train" }
tang-safetensors = { version = "0.1.0", path = "crates/tang-safetensors" }
tang-hub = { version = "0.1.0", path = "crates/tang-hub" }
tang-expr = { version = "0.1.0", path = "crates/tang-expr" }
tang-mesh = { version = "0.1.0", path = "crates/tang-mesh" }
tang-infer = { version = "0.1.0", path = "crates/tang-infer" }
tang-onnx = { version = "0.1.0", path = "crates/tang-onnx" }
tang-compile = { version = "0.1.0", path = "crates/tang-compile" }
tang-compute = { version = "0.1.0", path = "crates/tang-compute" }
tang-3dgs = { version = "0.1.0", path = "crates/tang-3dgs" }
tang-holo = { version = "0.1.0", path = "crates/tang-holo" }
iroh = "0.96"
tarpc = { version = "0.35", features = ["tokio1", "serde-transport"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tracing = "0.1"
wgpu = "24"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
safetensors = "0.4"
tokenizers = "0.21"
