[package]
name = "tang-bench"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "tang_bench"

[[bench]]
name = "fixed_size"
harness = false

[[bench]]
name = "dense_la"
harness = false

[[bench]]
name = "autodiff"
harness = false

[[bench]]
name = "differentiable"
harness = false

[[bench]]
name = "expr_graph"
harness = false

[[bench]]
name = "gpu_training"
harness = false

[[bench]]
name = "cpu_training"
harness = false

[[bench]]
name = "gpu_inference"
harness = false

[dependencies]
tang        = { workspace = true, features = ["std"] }
tang-la     = { workspace = true, features = ["std"] }
tang-ad     = { workspace = true }
tang-expr   = { workspace = true }
tang-gpu    = { workspace = true }
tang-train  = { workspace = true }
tang-tensor = { workspace = true }
tang-infer  = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
nalgebra  = "0.33"
glam      = "0.29"
rand      = "0.8"
