[package]
name = "tang-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU compute runtime for tang-expr — fused forward-backward kernels via wgpu"

[dependencies]
tang = { workspace = true }
tang-expr = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
safetensors = { workspace = true }

[[example]]
name = "physics_surrogate"

[[example]]
name = "quantum_poet"

[dev-dependencies]
approx = "0.5"
tang-expr = { workspace = true }
tang-train = { workspace = true }
tang-tensor = { workspace = true }
