[package]
name = "tang-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HuggingFace Hub model download and loading"

[dependencies]
tang = { workspace = true }
tang-la = { workspace = true }
tang-tensor = { workspace = true }
tang-safetensors = { path = "../tang-safetensors" }
hf-hub = "0.3"

[features]
default = []
tokenizers = ["dep:tokenizers"]

[dependencies.tokenizers]
version = "0.21"
optional = true

[dev-dependencies]
tempfile = "3"
