[package]
name = "tang-infer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inference runtime: KV-cache, sampling strategies, autoregressive generation"

[dependencies]
tang = { workspace = true }
tang-tensor = { workspace = true }
tang-train = { workspace = true }
