[package]
name = "tang-optim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optimization algorithms — Adam, L-BFGS, Newton, Levenberg-Marquardt"

[dependencies]
tang = { workspace = true }
tang-la = { workspace = true }
tang-ad = { workspace = true }

[dev-dependencies]
approx = "0.5"
