[package]
name = "tang-tensor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "N-dimensional arrays with CPU and GPU backends"

[dependencies]
tang = { workspace = true }
tang-la = { workspace = true }
tang-gpu = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:tang-gpu"]

[dev-dependencies]
approx = "0.5"
