[package]
name = "tang-train"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Computational graph, parameter management, training loop"

[dependencies]
tang = { workspace = true }
tang-la = { workspace = true }
tang-ad = { workspace = true }
tang-tensor = { workspace = true }
tang-optim = { workspace = true }

[[example]]
name = "quantum_poet"

[[example]]
name = "pinn_poisson"

[dev-dependencies]
approx = "0.5"
tang-safetensors = { workspace = true }
