[package]
name = "tang-train"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Computational graph, parameter management, training loop"

[features]
accelerate = ["tang-la/accelerate", "tang-tensor/accelerate"]

[dependencies]
tang = { workspace = true }
tang-la = { workspace = true }
tang-ad = { workspace = true }
tang-tensor = { workspace = true }
tang-optim = { workspace = true }

[[example]]
name = "quantum_poet"

[[example]]
name = "pinn_poisson"

[dev-dependencies]
approx = "0.5"
tang-safetensors = { workspace = true }
tang-hub = { workspace = true, features = ["tokenizers"] }
tang-infer = { workspace = true }
tokenizers = { workspace = true }

[[example]]
name = "smollm"
