[package]
name = "tang"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ecto/tang"
description = "Math library for physical reality — geometry, spatial algebra, tensor, training, GPU compute, and 3D gaussian splatting"

[features]
default = ["std"]
std = []
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]
exact = ["dep:robust", "std"]
libm = ["dep:libm"]

# Extended modules
la = ["std"]
ad = ["la"]
expr = ["std"]
gpu = ["expr", "dep:wgpu", "dep:pollster", "dep:safetensors-crate", "bytemuck"]
compute = ["expr", "bytemuck"]
metal = ["compute", "dep:metal", "dep:objc"]
cuda = ["compute", "dep:cudarc"]
tensor = ["la"]
optim = ["la", "ad"]
train = ["la", "ad", "tensor", "optim"]
safetensors = ["la", "tensor", "dep:safetensors-crate"]
splatting = ["gpu", "expr", "tensor", "dep:wgpu", "bytemuck", "dep:pollster"]
holo = ["splatting", "tensor", "dep:image"]
accelerate = ["la", "dep:faer"]

[dependencies]
# Core (always)
paste = "1"

# Optional core
bytemuck = { version = "1.14", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
robust = { version = "1.1", optional = true }
libm = { version = "0.2", optional = true }

# la
faer = { version = "0.20", optional = true }

# gpu / splatting
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
safetensors-crate = { package = "safetensors", version = "0.4", optional = true }

# compute
metal = { version = "0.31", optional = true }
objc = { version = "0.2", optional = true }
cudarc = { version = "0.12", features = ["nvrtc", "cublas", "cuda-version-from-build-system"], optional = true }

# holo
image = { version = "0.25", optional = true }

[dev-dependencies]
approx = "0.5"
